# Atlas

./: .env.example  .gitattributes  .gitignore  .mailmap  AI.md  LICENSE  README.md  SECURITY.md  atlas.py  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci.yml  release-linux.yml  release-windows.yml
apps/atlas/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/atlas/src/: App.tsx  main.tsx  styles.css
apps/atlas/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
apps/atlas/src-tauri/capabilities/: default.json
apps/atlas/src-tauri/icons/: icon.icns
apps/atlas/src-tauri/src/: lib.rs  main.rs
apps/atlas/src-tauri/windows/nsis/: hooks.nsh
prompts/: answer.md  claim_extract.md  fact_extract.md  memory_extract.md
scripts/: build_atlas_backend.py  build_atlas_msix.ps1  build_atlas_release.ps1  bump_atlas_version.py  check_atlas_version.py  clean_repo.ps1  rebuild_atlas_icon.ps1  run_repo_python.mjs  start_atlas_dev.ps1  verify_repo.ps1
src/atlas_local/: __init__.py  api.py  api_service.py  backend_entry.py  cli.py  code_runner.py  config.py  discovery.py  discovery_models.json  entrypoints.py  llm.py  root_launchers.py  run_contract.py  run_store.py  runtime.py  security.py  session.py  text_normalization.py  version.py  web_search.py
tests/: test_api.py  test_api_service.py  test_atlas_wrapper.py  test_browser_policy.py  test_browser_service.py  test_chat_context.py  test_cli_smoke.py  test_code_runner.py  test_config.py  test_discovery.py  test_entrypoints.py  test_evolution.py  test_llm.py  test_llm_context_window.py  test_mem0_service.py  test_memory_policy.py  test_reasoning_rules.py  test_root_launchers.py  test_run_store.py  test_security.py  test_text_normalization.py  test_thinking_stream.py  test_thread_titles.py  test_world_store.py
(+79 files in other folders)
